<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>tl_hardware</name>
    <version>0.0.0</version>
    <description>tlrobot hardware interface for ROS2 Control</description>
    <maintainer email="duyukun@fdrobot.com">duyukun</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>

    <depend>rclcpp_lifecycle</depend>
    <depend>hardware_interface</depend>
    <!-- <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend> -->
    <depend>pluginlib</depend>
    <!-- <depend>urdf</depend>
  <depend>control_msgs</depend> -->

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
